test/tests/compiler/17_supporting_dynamic_memory_allocation/valid/libraries/sizeof_extern_client.plx

extrn large_array: [1000][2000]f64;

pub fn main(none) i32 {
    return sizeof(large_array) == 16000000
}
