test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_parse/plx1_sizeof_storage_class.plx
pub fn main(none) i32 {
    return sizeof<data i32>
}
